--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" 
-    android:layout_height="90dp"
+    android:layout_height="180dp"
     android:padding="10dp"
     android:background="?attr/colorPrimary">
     
@@ -14,20 +14,20 @@
 
 
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Zhong weichang"
+        android:text="15090552277@163.com"
         android:textColor="#FFF"
         android:textSize="14sp" />
 
     <TextView
-        android:id="@+id/mail"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/username"
-        android:text="15090552277@163.com"
+        android:layout_above="@id/mail"
+        android:text="Zhong weichang"
         android:textColor="#FFF"
         android:textSize="14sp" />
 
